src/test/resources/syntax/invalid/group_definition_int_constant_for_string.unpick
unpick v3
const String
    0 = 0